--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amsterdam Family Trip - Day 2</title>
+    <title>Prompt</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -14,17 +14,25 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            min-height: 100vh;
+            padding: 20px;
+            box-sizing: border-box;
         }
         .container {
             max-width: 600px;
             padding: 20px;
             background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
             text-align: left;
+            box-sizing: border-box;
+            width: 100%;
         }
         h1 {
             color: #003264;
+            text-align: center;
+        }
+        ul {
+            padding-left: 20px;
         }
     </style>
 </head>
@@ -75,3 +83,4 @@
     </div>
 </body>
 </html>
+
