--- a/index.html
+++ b/index.html
@@ -40,46 +40,21 @@
     <div class="container">
         <h1>Prompt</h1>
         <p>Annual Performance Review</p>
-        <p><strong>1. Overall Performance Summary for 2024</strong></p>
+        <p><strong>Context</strong></p>
         <ul>
-            <li>Overall Performance Rating</li>
-            <li>Key Achievements and Successes in 2024</li>
-            <li>Areas for Improvement Identified in 2024, with actionable suggestions</li>
+            <li>You are country CEO in Travel Retail industry. You are preparing the annual review process for Sarah, who is Senior Manager of Retail Operations for Duty Free.</li>
+            <li>Sarah performed quite well in 2024 and the overall sales was great. Sarah is very strong in retail operations and goal oriented. She is structured and strong in execution. She demonstrated strong leadership.</li>
+            <li>While making great strides, there are a few areas where you and the team want Sarah to improve: her team members reflected that she puts too much pressure sometimes on the team, and that she can be more subtle in her communications, more considerate. You also want her to spend a bit more time in crafting a strategic vision and not just be too focused on day-to-day details, to prepare her for a next more senior role in the organization. </li>
         </ul>
-        <p><strong>2. Core Competency Evaluation</strong></p>
-        <p>Rate the manager's proficiency in each of the following core competencies on a 1-5 scale, with specific behavioral examples:</p>
+        <p><strong>Goal</strong></p>
+        <p>Your tasks is to help prepare the annual review with Sarah, and in order to do this, you need to generate an annual review report to address </p>
         <ul>
-            <li>Leadership and People Management</li>
-            <li>Strategic Thinking and Decision Making</li>
-            <li>Communication and Interpersonal Skills</li>
-            <li>Results Orientation and Execution</li>
-            <li>Innovation and Continuous Improvement</li>
+            <li>Her performance in 2024, her strengths & weaknesses</li>
+            <li>Constructive feedbacks for her to work on, provide her with a list of do & don’ts</li>
+            <li>Prepare a list of questions to discuss with her</li>
+            <li>Finally define her goal and next steps together </li>
         </ul>
-        <p><strong>3. Goal Review for 2024</strong></p>
-        <ul>
-            <li>Review each goal set for 2024, rating achievement on a 1-5 scale</li>
-            <li>Analyze reasons for exceeding, meeting, or missing each goal</li>
-            <li>Identify lessons learned to apply to 2025 goals</li>
-        </ul>
-        <p><strong>4. Goals and Objectives for 2025</strong></p>
-        <p>Set 4-6 SMART (Specific, Measurable, Achievable, Relevant, Time-bound) goals aligned with company objectives:</p>
-        <ul>
-            <li>Goal description and success metrics</li>
-            <li>Target completion dates</li>
-            <li>Required resources and support</li>
-        </ul>
-        <p><strong>5. Career Development Plan</strong></p>
-        <ul>
-            <li>Discuss manager's short-term and long-term career aspirations</li>
-            <li>Identify potential projects, training, coaching, or job enrichment opportunities</li>
-        </ul>
-        <p><strong>6. Final Comments</strong></p>
-        <ul>
-            <li>Open opportunity for the manager to provide additional feedback</li>
-            <li>Summarize key discussion points and action items</li>
-        </ul>
-        <p><strong>Now I want to generate an annual review report for Sarah.</strong></p>
-        <p>As Senior Manager of Retail Operations, Sarah consistently exceeded expectations in 2024. She spearheaded major initiatives that boosted sales by 18%, optimized inventory levels reducing excess by 25%, and launched a highly successful customer loyalty program. While making great strides, there were some delays in new store openings. Sarah is a strong leader focused on driving results, though she can work on enhancing cross-functional collaboration in 2025. For her future career growth, Sarah is interested in taking on more strategic responsibilities and potentially transitioning into a regional leadership role overseeing multiple markets in the next 2-3 years.</p>
+        <p>Note: Please copy BOTH the context and the goal to ChatGPT or Perplexity AI</p>
     </div>
 </body>
 </html>
