--- a/index.html
+++ b/index.html
@@ -56,6 +56,32 @@
         </ul>
         <p>Note: Please copy BOTH the context and the goal to ChatGPT or Perplexity AI</p>
     </div>
+    <script>
+        function copyToClipboard() {
+            // Create a temporary textarea element
+            var tempTextArea = document.createElement('textarea');
+            // Get the text content to copy
+            var content = document.querySelectorAll('.container p');
+            var textToCopy = "";
+            content.forEach(function(p) {
+                textToCopy += p.textContent + "\n";
+            });
+            // Set the value of the textarea to the text to copy
+            tempTextArea.value = textToCopy;
+            // Add the textarea to the document
+            document.body.appendChild(tempTextArea);
+            // Select the text
+            tempTextArea.select();
+            // Copy the text
+            document.execCommand('copy');
+            // Remove the textarea from the document
+            document.body.removeChild(tempTextArea);
+            // Alert to show the content has been copied
+            alert('Content copied to clipboard');
+        }
+    </script>
+</body>
+</html>
 </body>
 </html>
 
