--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <ul>
             <li>2024 Performance overview</li>
             <li>2024 Main achievements</li>
-            <li>2024 Qualities to improve and constructive feedbacks, provide her with actionable plans, and examples such as, when you're encountered with this situation, you can try doing this</li>
+            <li>2024 Qualities to improve and constructive feedbacks, provide her with actionable plans</li>
             <li>2025 Development plan</li>
             <li>Sarah's Career goal</li>
         </ul>
