--- a/index.html
+++ b/index.html
@@ -54,21 +54,24 @@
 <body>
     <div class="container">
         <h1>Prompt</h1>
-        <p>Annual Performance Review</p>
-        <p><strong>Context</strong></p>
+        <p>Annual Performance Review #CONTEXT#</p>
+        <p>You are a senior leader in Travel Retail industry. You are preparing the annual review process for Sarah, a Retail Operations Director for Duty Free.</p>
+        <p>Sarah performed quite well in 2024 and the overall sales was great. Sarah is very strong in retail operations and goal oriented. She is strong in execution. She demonstrated strong leadership.</p>
+        <p>There are a few areas where you want Sarah to improve on:</p>
         <ul>
-            <li>You are country CEO in Travel Retail industry. You are preparing the annual review process for Sarah, who is Senior Manager of Retail Operations for Duty Free.</li>
-            <li>Sarah performed quite well in 2024 and the overall sales was great. Sarah is very strong in retail operations and goal oriented. She is structured and strong in execution. She demonstrated strong leadership.</li>
-            <li>While making great strides, there are a few areas where you and the team want Sarah to improve: her team members reflected that she puts too much pressure sometimes on the team, and that she can be more subtle in her communications, more considerate. You also want her to spend a bit more time in crafting a strategic vision and not just be too focused on day-to-day details, to prepare her for a next more senior role in the organization. </li>
+            <li>She is known for her directness and her team wishes she could be more subtle in her communications. You want her to have a more strategic mindset towards landlord relationship management.</li>
+            <li>You also want her to spend a bit more time in crafting a strategic vision and not just be too focused on day-to-day details, to prepare her for a next more senior role in the organization.</li>
         </ul>
-        <p><strong>Goal</strong></p>
-        <p>Your tasks is to help prepare the annual review with Sarah, and in order to do this, you need to generate an annual review report to address </p>
+        <p># TONE#</p>
+        <p>Maintain a positive and motivational tone, fostering a sense of empowerment</p>
+        <p># OBJECTIVE #</p>
+        <p>Your will first prepare the annual review structure and questions to serve as base of discussion:</p>
         <ul>
-            <li>2024 Performance overview</li>
-            <li>2024 Main achievements</li>
-            <li>2024 Qualities to improve and constructive feedbacks, provide her with actionable plans</li>
-            <li>2025 Development plan</li>
-            <li>Sarah's Career goal</li>
+            <li>Lay out the discussion points you should discuss with Sarah during the one-hour review. Make the session constructive and helpful for Sarah. Ensure all questions and topics are relevant for her.</li>
+            <li>What shall you pay attention to when conducting this annual review</li>
+            <li>2024 Performance overview & 2024 Main achievements</li>
+            <li>2024 improvement points and constructive feedbacks, provide her with detailed actionable plans and exercises for each feedback</li>
+            <li>2025 Development plan adapted to Sarah's Career goal</li>
         </ul>
         <button class="copy-button" onclick="copyToClipboard()">Copy Content</button>
     </div>
